BPMS-405 - sonar & codeql fixes